# Codex-Discord-Rich-Presence

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  Taskfile.yml  build-dist.ps1  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md
assets/openai/: ATTRIBUTION.md
crates/codex-presence-core/: CORE_MANIFEST.json  Cargo.toml
crates/codex-presence-core/src/: lib.rs  presence.rs  usage.rs
docs/: README.md  index.md  releasing.md
docs/api/: codex-presence.md
docs/database/: schema.md
docs/ui/: UI_SITEMAP.md
examples/: discord-presence-config.example.json
plans/20260209-codex-discord-presence-v1/: plan.md
plans/20260209-codex-discord-presence-v1-1-polish/: plan.md
plans/20260209-codex-discord-presence-v1-2-usage-parity-ui/: plan.md
scripts/: approve-release.ps1  build-release.ps1  build-release.sh  check-release-contract.ps1  check-release-target.ps1  check-windows-sbom.ps1  new-windows-sbom.ps1  release-assets.ps1  release-contract.json
src/: app.rs  cli.rs  config.rs  cost.rs  discord.rs  lib.rs  main.rs  metrics.rs  model.rs  model_catalog.json  opencode.rs  process_guard.rs  session.rs  ui.rs  util.rs
tests/: index.md  integration.rs  release_approval.tests.ps1  release_assets.tests.ps1  release_contract.tests.ps1  release_target.tests.ps1  release_workflow.tests.ps1
(+21 files in other folders)
