[package]
name = "codex-discord-presence"
version = "1.7.2"
edition = "2024"
description = "Discord Rich Presence for Codex CLI, Codex VS Code Extension, Codex App, and ChatGPT App sessions"
license = "MIT"
keywords = ["codex", "discord", "rich-presence", "cli", "tui"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.2", features = ["crossterm"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
fs2 = "0.4.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
ureq = { version = "2.12.1", default-features = true }
walkdir = "2.5.0"

[build-dependencies]
ico = "0.4.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
winres = "0.1.12"
